JDK-7188276 : JSR 292: assert(ct == T_OBJECT) failed: rt=T_OBJECT, ct=13
  • Type: Bug
  • Component: hotspot
  • Sub-Component: compiler
  • Affected Version: hs23
  • Priority: P3
  • Status: Closed
  • Resolution: Fixed
  • OS: generic
  • CPU: generic
  • Submitted: 2012-07-31
  • Updated: 2013-08-02
  • Resolved: 2012-08-11
The Version table provides details related to the release that this issue/RFE will be addressed.

Unresolved : Release in which this issue/RFE will be addressed.
Resolved: Release in which this issue/RFE has been resolved.
Fixed : Release in which this issue/RFE has been fixed. The release containing this fix may be available for download as an Early Access Release or a General Availability Release.

To download the current JDK release, click here.
JDK 7 JDK 8 Other
7u40Resolved 8Fixed hs24Fixed
Description
The fix for this issue should have been pushed with 7187290 but I somehow missed it.

Comments
The issue was caused by a fix integrated in the same build it was fixed in. Closed as not verified (setup not available).
02-08-2013

EVALUATION http://hg.openjdk.java.net/hsx/hotspot-main/hotspot/rev/b72784e722ff
11-08-2012

EVALUATION http://hg.openjdk.java.net/hsx/hotspot-comp/hotspot/rev/b72784e722ff
02-08-2012