7188276: JSR 292: assert(ct == T_OBJECT) failed: rt=T_OBJECT, ct=13

Reviewed-by: kvn, jrose